adding last part 5 & 6

--- a/0.table_of_content.ipynb
+++ b/0.table_of_content.ipynb
@@ -140,42 +140,24 @@
     "      &emsp;4.12.2. Monthly Revenue Growth From 2016 - 2018<br>\n",
     "      &emsp;4.12.3. One-Time and Repeat Buyers on Revenue Contribution<br>\n",
     "\n",
-    "5. Modeling : Recommendation System <br>\n",
+    "5. Machine Learning Model : Recommendation System <br>\n",
     "   5.1. Feature Engineering and Selection<br>\n",
-    "      &emsp;5.1.1. Creating New Features<br>\n",
+    "      &emsp;5.1.1. Training and Testing model for collaborative<br>\n",
     "      &emsp;5.1.2. Data Preparation for Model Performance Evaluation<br>\n",
-    "         &emsp;5.1.2.a Repeat Buyers Two Transaction<br>\n",
-    "         &emsp;5.1.2.b Repeat Buyers Different Categories<br>\n",
-    "      &emsp;5.1.3. Data Preparation for Content-Based Filtering and Hybrid Model<br>\n",
-    "      &emsp;5.1.4. Data Preparation for Collaborative Filtering<br>\n",
-    "   5.2. Content-Based Filtering<br>\n",
-    "      &emsp;5.2.1. Similiarity Computation<br>\n",
-    "      &emsp;5.2.2. Recommendation Functions<br>\n",
-    "      &emsp;5.2.3. Recommendation Results<br>\n",
-    "      &emsp;5.2.4. Content-Based Filtering Impelementation<br>\n",
-    "   5.3. Collaborative Filtering<br>\n",
-    "      &emsp;5.3.1. Data Scaling and Loading<br>\n",
-    "      &emsp;5.3.2. Data Splitting<br>\n",
-    "      &emsp;5.3.3. Model Evaluation<br>\n",
-    "         &emsp;5.3.3.a Define Model<br>\n",
-    "         &emsp;5.3.3.b Evaluate Model Performance<br>\n",
-    "      &emsp;5.3.4. Hyperparameter Tuning<br>\n",
+    "         &emsp;5.1.2.A Dataset for repeat Transaction Evaluation<br>\n",
+    "         &emsp;5.1.2.B Dataset for cross categorical Repeat Transaction Evaluation<br>\n",
+    "   5.2. Collaborative Filtering<br>\n",
+    "      &emsp;5.2.1. Training and Testing model for collaborative filtering <br>\n",
+    "      &emsp;5.2.2. Hyperparameter Tuning for Best Model : SVD ++<br>\n",
+    "   5.3. Content-Based Filtering<br>\n",
     "   5.4.Hybrid Recommendation System<br>\n",
-    "   5.5.Recommendation System For New User<br>\n",
-    "      &emsp;5.5.1. Popularity-Based Recommendation<br>\n",
-    "         &emsp;5.5.1.a Most-Purchased Items<br>\n",
-    "         &emsp;5.5.2.b Popular Items in User's Area<br>\n",
-    "      &emsp;5.5.2. Implementation of Recommendation Functions<br>\n",
-    "   5.6. Batch Processing For Unseen Data<br>\n",
-    "      &emsp;5.6.1. Popularity-Based Recommendation<br>\n",
-    "         &emsp;5.6.1.1. Generate Predictions for Each User<br>\n",
-    "         &emsp;5.6.1.2. Calculate Average Estimated Ratings<br>\n",
-    "         &emsp;5.6.1.3. Merge Recommendations with Transaction Data<br>\n",
-    "         &emsp;5.6.1.4. Check Recommendation Accuracy<br>\n",
-    "         &emsp;5.6.1.5. Compare Product Categories Between Transactions<br>\n",
-    "      &emsp;5.6.2. Second Transaction with Different Categories<br>\n",
-    "         &emsp;5.6.2.1. Generate Predictions for Each User<br>\n",
-    "         &emsp;5.6.1.2. Check Recommendation Accuracy<br>\n",
+    "   5.5. Recommendation for New User (Cold Start)<br>\n",
+    "   5.6. Machine Learning Implementation<br>\n",
+    "      &emsp;5.6.1. Implementation On New User<br>\n",
+    "      &emsp;5.6.2. Implementation On  Normal Customer<br>\n",
+    "   5.7. Batch Processing for Unseen Data <br>\n",
+    "      &emsp;5.7.1. Batch Processing for 2nd Transaction of 100 customers<br>\n",
+    "      &emsp;5.7.2. Batch Processing for 2nd Transaction of 100 Customers with Cross-Categorical Transaction<br>\n",
     "6. Conclusion and Recommendation <br>\n",
     "   6.1. Conclusion<br>\n",
     "   6.2. Recommendation<br>\n",
