--- a/6.conclusion_recommendation.ipynb
+++ b/6.conclusion_recommendation.ipynb
@@ -31,12 +31,8 @@
     "\n",
     "    1.5. Regarding the contribution to the company’s revenue, one-time buyers, who make up 97% of the total customer base, contribute 94% of the revenue, while repeat customers, who only make up 3% of the customer base, contribute nearly twice as much, with 5.5% of the revenue.\n",
     "\n",
-    "2. The best performing collaborative filtering models is SVD++ Model after hyperparameter tuning with RMSE of user ratings = 1.386. Applying Cascade Hybrid approach with Content Based Recommendation system using TF-IDF Matrix and Cossine Similarities will result of succesfull recommendation accuracy by 19% of cross categorical repeat transactions.\n",
+    "2. The best performing collaborative filtering models is SVD++ Model after hyperparameter tuning with RMSE of user ratings = 1.364 Applying Cascade Hybrid approach with Content Based Recommendation system using TF-IDF Matrix and Cossine Similarities will result of succesfull recommendation accuracy by 19% of cross categorical repeat transactions  on unseen data. Based on the average percentage of cross-categorical transactions per quarter, which is 4.6%, the application of machine learning can increase cross-categorical transactions by 14.4%.\n",
     "\n",
-    "The machine learning model we developed can predict/recommend 19% cross-categorical transactions on unseen data. Based on the average percentage of cross-categorical transactions per quarter, which is 4.6%, the application of machine learning can increase cross-categorical transactions by 14.4%.\n",
-    "\n",
-    "furthermore recommendation system tends to increase cross-selling and improve customer shopping experience. thus increasing the customer retention rate. For every 1% of retention rate it will increase our quartal revenue by BRL .... or 0.0 %\n",
-    "    \n",
     "\n",
     "3. The calculation below show simulation illustation that estimates the potential revenue growth per quarter from implementing the recommendation system with previous information :\n",
     "- Average Total Customers per Quarter: 11,685 customers\n",
@@ -48,28 +44,26 @@
     "- Average Quarterly Revenue from Current Repeat Buyers: BRL 10,041\n",
     "- Average Current Quarterly Total Revenue from All Customers: BRL 171,170\n",
     "\n",
-    "    1. *Potential Quarterly Revenue from a Single Percentage Increase  in Retention Rate*\n",
+    "    3.1. Potential Quarterly Revenue from Recommendation System Implementation on Retention Rate*\n",
     "    - *Current Customer Retention Rate*: 4.6%\n",
-    "    - *Increased Retention Rate*: 13%, increase in retention rate (+8.4%)\n",
+    "    - *Increased Retention Rate*: 19%, increase in retention rate (+14.4%)\n",
     "    - *Estimated Increase in the Number of Repeat Buyers*:\n",
-    "        - 13% of total customers = 13% × 11,685 customers = 1,519 customers\n",
-    "        - 1,519 customers (8.4% increased) - 516 customers (current) = *1,003 customers*, number increase of repeat buyers for an 8.4% increase\n",
+    "        - 19% of total customers = 19% × 11,685 customers = 2,220 customers\n",
+    "        - 2,220 customers (14.4% increased) - 516 customers (current) = *1,704 customers*, number increase of repeat buyers for a 14.4% increase.\n",
     "    - *Potential Quarterly Revenue from Increased Repeat Buyers*:\n",
     "        - *Total Orders by Increased Repeat Buyers*: \n",
-    "            - 1,519 customers × 2 purchases = 3,038 orders\n",
-    "            - 3,038 orders (8.4% increased) - 1,032 orders (current) = *2,006 orders*, number increase of repeat buyers' orders for an 8.4% increase\n",
+    "        - 2,220 customers × 2 purchases = 4,440 orders\n",
+    "        - 4,440 orders (14.4% increased) - 1,032 orders (current) = *3,408 orders*, number increase of repeat buyers' orders for a 14.4% increase.\n",
     "        - *Potential Quarterly Revenue*: \n",
-    "            - 3,038 orders × BRL 12.14 = *BRL 36,881*\n",
+    "        - 4,440 orders × BRL 12.14 = *BRL 53,901*\n",
     "\n",
-    "    2. *Potential Quarterly Revenue Growth*:\n",
+    "    3.2. Potential Quarterly Revenue Growth*\n",
     "    - *Increase in Quarterly Revenue from Increased Repeat Buyers*: \n",
-    "        - BRL 36,881 (8.4% increased) - BRL 10,041 (current) = *BRL 26,840*, potential quarterly revenue increase from increased repeat buyers for an 8.4% increase\n",
+    "    - BRL 53,901 (14.4% increased) - BRL 10,041 (current) = *BRL 43,860*, potential quarterly revenue increase from increased repeat buyers for a 14.4% increase.\n",
     "    - *Estimated Quarterly Total Revenue After Increase*:\n",
-    "        - BRL 171,170 + BRL 26,840 = *BRL 198,010*\n",
-    "    - *Potential Quarterly Revenue Growth (%) from a 1% Increase in Retention Rate*:\n",
-    "        - ((BRL 198,010 - BRL 171,170) / BRL 171,170) × 100 = *15.7%*\n",
-    "\n",
-    "    Implementing a recommendation system can make a big difference in revenue, even with a small increase in customer retention. From the above example, **a 1% rise in the retention rate could boost Olist's quarterly revenue by BRL 26,840**. This increase might seem modest, but it results in **around a 2% boost in total revenue**, proving how effective personalized recommendations can be.\n"
+    "    - BRL 171,170 + BRL 43,860 = *BRL 215,030*\n",
+    "    - *Potential Quarterly Revenue Growth (%) from a 14.4% Increase in Retention Rate*:\n",
+    "    - ((BRL 215,030 - BRL 171,170) / BRL 171,170) × 100 = *25.6%*\n"
    ]
   },
   {
