--- a/6.conclusion_recommendation.ipynb
+++ b/6.conclusion_recommendation.ipynb
@@ -107,7 +107,9 @@
     "\n",
     "1. Provide more data of repeat transaction will improve the model performance in predicting / giving recommendation for next purchase based on collaborative filtering to mitigate sparsity problem. More data on customer demographics and product descriptions also can improve the overall performance of the model by allowing more variations of personalized recommendations.\n",
     "\n",
-    "2. Explore more option for content based filtering and hybrid approach to recommend items in similar and cross categories. conduct the researc based on hystorical data of optimal item recommendation to improve model performance."
+    "2. Explore more option for content based filtering and hybrid approach to recommend items in similar and cross categories. conduct the researc based on hystorical data of optimal item recommendation to improve model performance.\n",
+    "\n",
+    "3. Applying Implicit data based on customers items search history and shopping cart might be represent more actual condition of recommendation system for customer haven't make any transaction."
    ]
   },
   {
